Allow system variable `-Djdk.attach.allowAttachSelf=true `